--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.puremock</groupId>
-    <artifactId>puremock</artifactId>
+    <groupId>com.whymock</groupId>
+    <artifactId>whymock</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
@@ -63,7 +63,7 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>libjar/</classpathPrefix>
-                            <mainClass>com.puremock.server.PureMockServer</mainClass>
+                            <mainClass>com.whymock.server.MockServer</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
